PipOs - Integration of the Validation System

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="packages/attack/component/AccessPointComponent.js"></script>
     <script src="packages/attack/AttackPackage.js"></script>
     <script src="lib/PipOsHelper.js"></script>
+    <script src="lib/PipOsValueValidator.js"></script>
     <script src="lib/PipOsFormBuilder.js"></script>
     <script src="lib/PipOsFilesystem.js"></script>
     <script src="PipOs.js"></script>
