--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="lib/PipOsHelper.js"></script>
     <script src="lib/PipOsValueValidator.js"></script>
     <script src="lib/PipOsFormBuilder.js"></script>
-    <script src="lib/PipOsFilesystem.js"></script>
+    <script src="lib/PipOsSystem.js"></script>
     <script src="PipOs.js"></script>
     <script>if (window.module) module = window.module;</script>
 
