PipOs - Better Interface, System_info, Config Generation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <!-- Vendor CSS Include -->
     <link rel="stylesheet" type="text/css" href="vendor/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/font-awesome-4.7.0/css/font-awesome-animation.min.css">
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap-4.0.0-beta/css/bootstrap.min.css">
     <link href="vendor/jcubic-jquery-terminal/css/jquery.terminal-1.6.1.css" rel="stylesheet"/>
     <link href="vendor/Keyboard-master/dist/css/keyboard-dark.min.css" rel="stylesheet"/>
