PipOs - Preparation for Simple Attack Components

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 
     <!-- PipOs Javascript Include -->
     <script src="packages/attack/component/AccessPointComponent.js"></script>
+    <script src="packages/attack/component/WifiClientComponent.js"></script>
+    <script src="packages/attack/component/WifiMonitorComponent.js"></script>
+    <script src="packages/attack/component/SnifferComponent.js"></script>
+    <script src="packages/attack/component/InjectorComponent.js"></script>
+    <script src="packages/attack/component/DeauthComponent.js"></script>
+    <script src="packages/attack/component/DhcpDnsComponent.js"></script>
+
     <script src="packages/attack/AttackPackage.js"></script>
     <script src="lib/PipOsHelper.js"></script>
     <script src="lib/PipOsValueValidator.js"></script>
